@@ -1,4 +1,10 @@
+#!/usr/bin/perl
+
+BEGIN {
+	$|  = 1;
+	$^W = 1;
+}
+
 use Test::More tests => 1;
-BEGIN { use_ok( 'IO::Socket::Multicast' ) };
 
-
+use_ok( 'IO::Socket::Multicast' );
